methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: not found: value passerLigneDuDessus
  for (i <- 1 to 3){ faireLigne();passerLigneDuDessus()}
                                  ^